src/objects/Project_Feedback__c.object
<CustomObject>
    <description>TOOLKIT - to capture feedback about the SingleCRM project from the Extended Core Team community and other feedback from various avenues.</description>
    <fields>
        <fullName>Closed_on_Creation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed on Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <description>Date when status changed to &quot;completed&quot;</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Open__c</fullName>
        <description>Displays the number of days until project feedback is answered</description>
        <formula>IF(NOT(ISPICKVAL( Status__c ,&quot;Closed&quot;)), TODAY() - DATEVALUE( CreatedDate ), Completed_Date__c - DATEVALUE(CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Raised_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Raised By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Feature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Feature</label>
        <referenceTo>Capability__c</referenceTo>
        <relationshipLabel>Project Feedback</relationshipLabel>
        <relationshipName>Project_Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Meeting_Notes__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Meeting Notes</label>
        <referenceTo>Meeting_Notes__c</referenceTo>
        <relationshipLabel>Project Feedback</relationshipLabel>
        <relationshipName>Project_Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Project Feedback</relationshipLabel>
        <relationshipName>Project_Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Requirement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Requirement</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Project Feedback</relationshipLabel>
        <relationshipName>Project_Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Sprint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Sprint</label>
        <referenceTo>Sprint__c</referenceTo>
        <relationshipLabel>Project Feedback</relationshipLabel>
        <relationshipName>Project_Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related User Story</label>
        <referenceTo>User_Story__c</referenceTo>
        <relationshipLabel>Project Feedback</relationshipLabel>
        <relationshipName>Project_Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resolution_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Resolution Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resolution_Type__c</fullName>
        <label>Resolution Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Existing Requirement</fullName>
                </value>
                <value>
                    <fullName>New Requirement</fullName>
                </value>
                <value>
                    <fullName>Change Request</fullName>
                </value>
                <value>
                    <fullName>Future Scope</fullName>
                </value>
                <value>
                    <fullName>Question Answered</fullName>
                </value>
                <value>
                    <fullName>Training Materials</fullName>
                </value>
                <value>
                    <fullName>Project Communication</fullName>
                </value>
                <value>
                    <fullName>Change Management</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>No Action Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chatter</fullName>
                </value>
                <value>
                    <fullName>Open House</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <label>Topic</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accounts, Leads, Contacts</fullName>
                </value>
                <value>
                    <fullName>Data Migration</fullName>
                </value>
                <value>
                    <fullName>Doc Strategy</fullName>
                </value>
                <value>
                    <fullName>Encryption</fullName>
                </value>
                <value>
                    <fullName>Forecasting</fullName>
                </value>
                <value>
                    <fullName>Interfaces/ETL</fullName>
                </value>
                <value>
                    <fullName>LoA</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Org Strategy/Sales Hierarchy</fullName>
                </value>
                <value>
                    <fullName>Partner Portal</fullName>
                </value>
                <value>
                    <fullName>Reporting</fullName>
                </value>
                <value>
                    <fullName>Sales Process</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>SAVO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Project Feedback</label>
    <listViews>
        <fullName>Accounts_Leads_Contacts_Scrum</fullName>
        <booleanFilter>1 or 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Topic__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Resolution_Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Topic__c</field>
            <operation>contains</operation>
            <value>Accounts</value>
        </filters>
        <filters>
            <field>Topic__c</field>
            <operation>contains</operation>
            <value>hierarchy</value>
        </filters>
        <label>Accounts,Leads,Contacts/Sales Hierarchy</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Topic__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Resolution_Type__c</columns>
        <columns>Resolution_Comments__c</columns>
        <columns>Days_Open__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Interface</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Topic__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Source__c</columns>
        <columns>Resolution_Type__c</columns>
        <columns>Resolution_Comments__c</columns>
        <columns>Days_Open__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Topic__c</field>
            <operation>equals</operation>
            <value>Interfaces/ETL</value>
        </filters>
        <label>All - Interface</label>
    </listViews>
    <listViews>
        <fullName>SAVO_Project_Feedback</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>Resolution_Comments__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Completed_Date__c</columns>
        <columns>Raised_By__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Topic__c</field>
            <operation>equals</operation>
            <value>SAVO</value>
        </filters>
        <label>SAVO - Project Feedback</label>
    </listViews>
    <listViews>
        <fullName>Sales_Process_TEAM_Project_Feedback</fullName>
        <columns>NAME</columns>
        <columns>Topic__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Topic__c</field>
            <operation>equals</operation>
            <value>Sales Process</value>
        </filters>
        <label>Sales Process TEAM Project Feedback</label>
    </listViews>
    <nameField>
        <displayFormat>PF-{0000}</displayFormat>
        <label>Project Feedback No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Project_Feedback_Resolution_Status</fullName>
        <active>true</active>
        <description>Status Needs to change from new when a resolution comment has been entered</description>
        <errorConditionFormula>ISPICKVAL( Status__c , &quot;New&quot;)  &amp;&amp; Resolution_Comments__c &lt;&gt;&quot;&quot;</errorConditionFormula>
        <errorMessage>Please change the status of the item</errorMessage>
    </validationRules>
</CustomObject>